Add validations for Branch related Apis
